# ChangeLog for app-cdr/cdrdao
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/cdrdao/ChangeLog,v 1.97 2006/08/02 18:36:30 gustavoz Exp $

  02 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  cdrdao-1.2.1-r1.ebuild:
  Stable on hppa wrt #139249

  13 Jul 2006; Aron Griffis <agriffis@gentoo.org> cdrdao-1.2.1-r1.ebuild:
  Mark 1.2.1-r1 stable on ia64

  08 Jul 2006; Lars Weiler <pylon@gentoo.org>
  -files/cdrdao-1.1.7-gentoo-version.patch,
  -files/cdrdao-1.1.7-r2-mp32dao-gentoo.diff,
  -files/cdrdao-1.1.9-cast.patch, -files/cdrdao-1.1.9-ppc64.patch,
  -files/1.1.8-gcc34.patch, -files/cdrdao-Project.h-gcc3.4.patch,
  -cdrdao-1.1.7-r3.ebuild, -cdrdao-1.1.9.ebuild, -cdrdao-1.1.9-r2.ebuild,
  -cdrdao-1.2.0.ebuild, -cdrdao-1.2.0-r1.ebuild:
  Cleaned out old versions.

  08 Jul 2006; Thomas Cort <tcort@gentoo.org> cdrdao-1.2.1-r1.ebuild:
  Stable on alpha wrt Bug #139249.

  06 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  cdrdao-1.2.1-r1.ebuild:
  Stable on sparc wrt #139249

  06 Jul 2006; Markus Rothe <corsair@gentoo.org> cdrdao-1.2.1-r1.ebuild:
  Stable on ppc64

  05 Jul 2006; Joshua Jackson <tsunam@gentoo.org> ChangeLog:
  Stable x86; bug #139249

  05 Jul 2006; Luis Medinas <metalgod@gentoo.org> cdrdao-1.2.1-r1.ebuild:
  Stable on amd64 see bug #139249.

  30 Jun 2006; Lars Weiler <pylon@gentoo.org> cdrdao-1.2.1-r1.ebuild:
  Stable on ppc; gcc-4 related; bug #138099.

  02 Apr 2006; Thomas Cort <tcort@gentoo.org> cdrdao-1.2.1-r1.ebuild:
  Added ~alpha keyword wrt bug #117451

  24 Mar 2006; Aron Griffis <agriffis@gentoo.org> cdrdao-1.2.1-r1.ebuild:
  Mark 1.2.1-r1 ~ia64

  14 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org> cdrdao-1.2.1.ebuild:
  Stable on hppa wrt #117448

  08 Jan 2006; <nixnut@gentoo.org> cdrdao-1.2.1.ebuild:
  marked stable on ppc, bug #117448

  03 Jan 2006; Markus Rothe <corsair@gentoo.org> cdrdao-1.2.1.ebuild:
  Stable on ppc64
