@@ -14,6 +14,7 @@ MD5 bfcab12a6211829eb71aa6ee3d0245be files/gcdmaster.desktop 127
 RMD160 565c477fb1e8b937b97ce4767c2343741e22a425 files/gcdmaster.desktop 127
 SHA256 2cd560f369ae9b40e4c63c099c851290809493df8d8be50deec592dcecb5005d files/gcdmaster.desktop 127
 DIST cdrdao-1.2.1.tar.gz 1728003 RMD160 4f6cabd016af69746db6d31d58ec0a7f49c38fde SHA1 530725bd0ed29eeda97eb5fcedbf7b4b44f4e863 SHA256 740dda4c4e88754d4a5997cd5130b4569dfcb0c9123ba6acaed3c266ac998162
+DIST cdrdao-1.2.2.tar.bz2 1408344 RMD160 c537c535a4106655f89f7cfa5895ffcb5b9464e2 SHA1 2699e56e00342c1fa2a3815ed02418fe964b276b SHA256 de180041e57f8e1c88c9b6f9b6c51b0abf0dc2744c4fa37a0248d48f40e58038
 EBUILD cdrdao-1.2.1-r1.ebuild 1673 RMD160 d7c17430f7230b2f5e12af913c82ad9d1a48a38c SHA1 0b48cac9d5907cec6f179cd82b953d4ffed718dc SHA256 d3452eb637cfcbb938819589ab5480e509d83877c7d14accc14e451b986107d6
 MD5 aecc99cf49f0c6d707cd9b735e595b37 cdrdao-1.2.1-r1.ebuild 1673
 RMD160 d7c17430f7230b2f5e12af913c82ad9d1a48a38c cdrdao-1.2.1-r1.ebuild 1673
@@ -22,10 +23,14 @@ EBUILD cdrdao-1.2.1.ebuild 1551 RMD160 267398a684c3acfd13a90ee5a676c3d6fcc060a2 
 MD5 5ee16464e76dede4bbc9ce12a4d7452c cdrdao-1.2.1.ebuild 1551
 RMD160 267398a684c3acfd13a90ee5a676c3d6fcc060a2 cdrdao-1.2.1.ebuild 1551
 SHA256 8c908639ea692c83fad34671ee7d13355561290a86c4b09f0bde33a041423ef3 cdrdao-1.2.1.ebuild 1551
-MISC ChangeLog 13262 RMD160 ddc4a1a2c77ccc14897a03a757cdd426d3292347 SHA1 e9a080062fdd516b56b8082523410c5c1915088d SHA256 f28b90e027c7da71c4f07c496bdd64cceb3798edc92f7da92bd618a6a2d6c963
-MD5 315b83475faf8bf709936e178263610f ChangeLog 13262
-RMD160 ddc4a1a2c77ccc14897a03a757cdd426d3292347 ChangeLog 13262
-SHA256 f28b90e027c7da71c4f07c496bdd64cceb3798edc92f7da92bd618a6a2d6c963 ChangeLog 13262
+EBUILD cdrdao-1.2.2.ebuild 1554 RMD160 8d0392b1daff2efb5b935f1d1c87eb6e54a9a8b7 SHA1 2d439d40cc3c5eeacdf384e8e010b5540a9d7611 SHA256 1cc17e4dc6dac723ca1953dfbc9558545620172ce71127133186ac7657ba9361
+MD5 8374849c09d789efc6888339831674af cdrdao-1.2.2.ebuild 1554
+RMD160 8d0392b1daff2efb5b935f1d1c87eb6e54a9a8b7 cdrdao-1.2.2.ebuild 1554
+SHA256 1cc17e4dc6dac723ca1953dfbc9558545620172ce71127133186ac7657ba9361 cdrdao-1.2.2.ebuild 1554
+MISC ChangeLog 13380 RMD160 c4da8668e5201597a7cb3e0b67d397cc40792456 SHA1 ce6fab0c52e9fdbb2cbcf3b29f9774117b5e3e8f SHA256 e591292325f91753e1ba88635300839c4c300ea067918841e14e8be18babdea5
+MD5 d09af00ba9da838614e29e2a9b2625f4 ChangeLog 13380
+RMD160 c4da8668e5201597a7cb3e0b67d397cc40792456 ChangeLog 13380
+SHA256 e591292325f91753e1ba88635300839c4c300ea067918841e14e8be18babdea5 ChangeLog 13380
 MISC metadata.xml 319 RMD160 54559b717de30245b4e3369d398d0d4b8786cb94 SHA1 37ad6871b8179ee4180b374c9a4693253aa0bdc0 SHA256 449cdb691234e9d248959657370e866690fa998b7652124e8af2065447b042ea
 MD5 dbe5456b02450a781ff76c4ffc65fcec metadata.xml 319
 RMD160 54559b717de30245b4e3369d398d0d4b8786cb94 metadata.xml 319
@@ -36,10 +41,13 @@ SHA256 8076c57503bbbb93ae654b25d4cb1ae1776f6063e0ad082b23b83cf7ce175b14 files/di
 MD5 e5822de03f5bd65649ed7d55e9efcbed files/digest-cdrdao-1.2.1-r1 241
 RMD160 38efa9cf2fc7928157e34b38be945b4feeebaa91 files/digest-cdrdao-1.2.1-r1 241
 SHA256 8076c57503bbbb93ae654b25d4cb1ae1776f6063e0ad082b23b83cf7ce175b14 files/digest-cdrdao-1.2.1-r1 241
+MD5 fd5863cff348341560545177d706905e files/digest-cdrdao-1.2.2 244
+RMD160 0615c2a8c3b8ffa600eca726ec7930767118f502 files/digest-cdrdao-1.2.2 244
+SHA256 f1e4558a0428b88fba45b7031b7a370b72fe0b2761609cee6a4d1e30c523bccc files/digest-cdrdao-1.2.2 244
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.5-ecc0.1.6 (GNU/Linux)
+Version: GnuPG v1.4.5 (GNU/Linux)
 
-iD8DBQFE0PDDKRy60XGEcJIRAi1fAJ9rUbGyuu3NV6NLDvsp2FXSqSiWnQCfX//q
-wSybXXlY408NQNni6DED1mc=
-=uptm
+iD8DBQFFTLXpwUpWvClEHQoRAjSYAJ9Xb9FrO/W+1LPLRVE8lHrJS5joygCdFowW
+ipJDf9Ec9JtSWqBMh+ve+0I=
+=OUfK
 -----END PGP SIGNATURE-----
