@@ -1,0 +1,3 @@
+MD5 f0cbf36907406cb4f4c568f9e6669a34 cdrdao-1.2.2.tar.bz2 1408344
+RMD160 c537c535a4106655f89f7cfa5895ffcb5b9464e2 cdrdao-1.2.2.tar.bz2 1408344
+SHA256 de180041e57f8e1c88c9b6f9b6c51b0abf0dc2744c4fa37a0248d48f40e58038 cdrdao-1.2.2.tar.bz2 1408344
