@@ -1,6 +1,11 @@
 # ChangeLog for app-cdr/cdrdao
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/cdrdao/ChangeLog,v 1.97 2006/08/02 18:36:30 gustavoz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/cdrdao/ChangeLog,v 1.98 2006/11/04 15:46:40 metalgod Exp $
+
+*cdrdao-1.2.2 (04 Nov 2006)
+
+  04 Nov 2006; Luis Medinas <metalgod@gentoo.org> +cdrdao-1.2.2.ebuild:
+  Version Bump.
 
   02 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org>
   cdrdao-1.2.1-r1.ebuild:
